--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 
 <body>
-  <canvas id="myCanvas" width="400" height="400"></canvas>
+  <!-- <canvas id="myCanvas" width="400" height="400"></canvas> -->
 </body>
 </html>
